[gd_scene load_steps=2 format=2]

[ext_resource path="res://GUI/Main_Menu/MainMenu.gd" type="Script" id=1]

[node name="MainMenu" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="Control" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="HostContainer" type="Control" parent="Control"]
anchor_top = 0.05
anchor_right = 0.4
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HostAnchorContainer" type="VBoxContainer" parent="Control/HostContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 50
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CreateServerLabel" type="Label" parent="Control/HostContainer/HostAnchorContainer"]
margin_right = 409.0
margin_bottom = 14.0
text = "CREATE SERVER"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HostServerNameLabel" type="Label" parent="Control/HostContainer/HostAnchorContainer"]
margin_top = 64.0
margin_right = 409.0
margin_bottom = 78.0
text = "Server Name"
align = 1
valign = 1

[node name="HostServerNameLineEdit" type="LineEdit" parent="Control/HostContainer/HostAnchorContainer"]
margin_top = 128.0
margin_right = 409.0
margin_bottom = 152.0
text = "Default Server Name"
align = 1

[node name="HostServerIPLabel" type="Label" parent="Control/HostContainer/HostAnchorContainer"]
margin_top = 202.0
margin_right = 409.0
margin_bottom = 216.0
text = "Server IP Adress"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HostServerIPLineEdit" type="LineEdit" parent="Control/HostContainer/HostAnchorContainer"]
margin_top = 266.0
margin_right = 409.0
margin_bottom = 290.0
text = "127.0.0.1"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HostServerPortLabel" type="Label" parent="Control/HostContainer/HostAnchorContainer"]
margin_top = 340.0
margin_right = 409.0
margin_bottom = 354.0
text = "Server Port"
align = 1

[node name="HostServerPortLineEdit" type="LineEdit" parent="Control/HostContainer/HostAnchorContainer"]
margin_top = 404.0
margin_right = 409.0
margin_bottom = 428.0
text = "17017"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CreateServerButton" type="Button" parent="Control/HostContainer/HostAnchorContainer"]
margin_top = 478.0
margin_right = 409.0
margin_bottom = 498.0
text = "Create Server"

[node name="JoinContainer" type="Control" parent="Control"]
anchor_left = 0.6
anchor_top = 0.05
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="JoinAnchorContainer" type="VBoxContainer" parent="Control/JoinContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 50
__meta__ = {
"_edit_use_anchors_": false
}

[node name="JoinServerLabel" type="Label" parent="Control/JoinContainer/JoinAnchorContainer"]
margin_right = 409.0
margin_bottom = 14.0
text = "JOIN SERVER"
align = 1
valign = 1

[node name="JoinServerIPLabel" type="Label" parent="Control/JoinContainer/JoinAnchorContainer"]
margin_top = 64.0
margin_right = 409.0
margin_bottom = 78.0
text = "Server IP Adress"
align = 1
valign = 1

[node name="JoinServerIPLineEdit" type="LineEdit" parent="Control/JoinContainer/JoinAnchorContainer"]
margin_top = 128.0
margin_right = 409.0
margin_bottom = 152.0
text = "127.0.0.1"
align = 1

[node name="JoinServerPortLabel" type="Label" parent="Control/JoinContainer/JoinAnchorContainer"]
margin_top = 202.0
margin_right = 409.0
margin_bottom = 216.0
text = "Server Port"
align = 1
valign = 1

[node name="JoinServerPortLineEdit" type="LineEdit" parent="Control/JoinContainer/JoinAnchorContainer"]
margin_top = 266.0
margin_right = 409.0
margin_bottom = 290.0
text = "17017"
align = 1

[node name="JoinServerButton" type="Button" parent="Control/JoinContainer/JoinAnchorContainer"]
margin_top = 340.0
margin_right = 409.0
margin_bottom = 360.0
text = "Join Server"

[node name="Label" type="Label" parent="Control/JoinContainer/JoinAnchorContainer"]
margin_top = 410.0
margin_right = 409.0
margin_bottom = 424.0
text = "Default Server Name 192.168.0.1 17017"

[node name="ServerList" type="HBoxContainer" parent="Control/JoinContainer/JoinAnchorContainer"]
margin_top = 474.0
margin_right = 409.0
margin_bottom = 488.0

[node name="ServerNamesContainer" type="VBoxContainer" parent="Control/JoinContainer/JoinAnchorContainer/ServerList"]
margin_right = 164.0
margin_bottom = 14.0

[node name="ServerNames" type="Label" parent="Control/JoinContainer/JoinAnchorContainer/ServerList/ServerNamesContainer"]
margin_right = 164.0
margin_bottom = 14.0
text = "TEST Default Server Name"

[node name="ServersIPsContainer" type="VBoxContainer" parent="Control/JoinContainer/JoinAnchorContainer/ServerList"]
margin_left = 168.0
margin_right = 244.0
margin_bottom = 14.0

[node name="ServerIps" type="Label" parent="Control/JoinContainer/JoinAnchorContainer/ServerList/ServersIPsContainer"]
margin_right = 76.0
margin_bottom = 14.0
text = "192.168.0.2"

[node name="ServersPortsContainer" type="VBoxContainer" parent="Control/JoinContainer/JoinAnchorContainer/ServerList"]
margin_left = 248.0
margin_right = 288.0
margin_bottom = 14.0

[node name="ServerPorts" type="Label" parent="Control/JoinContainer/JoinAnchorContainer/ServerList/ServersPortsContainer"]
margin_right = 40.0
margin_bottom = 14.0
text = "17050"
[connection signal="pressed" from="Control/HostContainer/HostAnchorContainer/CreateServerButton" to="." method="_on_CreateServerButton_pressed"]
[connection signal="pressed" from="Control/JoinContainer/JoinAnchorContainer/JoinServerButton" to="." method="_on_JoinServerButton_pressed"]
